[package]
name = "bugsyth_engine"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bugsyth/bugsyth_engine"
license = "MIT OR Apache-2.0"
description = "little engine using glium"

[dependencies]
# Graphics
glium = "0.36.0"
image = "0.25.5"
obj = "0.10.2"

# Audio
cpal = "0.15.3"
wav_io = "0.1.15"

# Math
vek = "0.17.1"
rand = "0.9.0"

# Multi Threading
rayon = "1.10.0"

[dev-dependencies]
bugsyth_engine_imgui_support = "0.3.1"