[package]
name = "bugsyth_engine"
version = "0.6.1"
edition = "2024"
repository = "https://github.com/bugsyth/bugsyth_engine"
license = "MIT OR Apache-2.0"
description = "little framework using glium"
readme = "README.md"

[dependencies]
# Graphics
glium = "0.36.0"
image = "0.25.5"

# Font 
fontdue = "0.9.3"

# File Loading
obj = "0.10.2"
gltf = "1.4.1"

# Audio
cpal = "0.15.3"
wav_io = "0.1.15"

# Math
vek = "0.17.1"
fastrand = "2.3.0"

# Multi Threading
rayon = "1.10.0"

[dev-dependencies]
bugsyth_engine_imgui_support = "0.4.0"