[package]
name = "bugsyth_engine"
version = "0.6.1"
edition = "2024"
repository = "https://github.com/bugsyth/bugsyth_engine"
license = "MIT OR Apache-2.0"
description = "little framework using glium"
readme = "README.md"

[dependencies]
# Graphics
wgpu = "0.24"
image = "0.25"

# Font 
fontdue = "0.9"

# File Loading
obj = "0.10"

# Audio
cpal = "0.15"
wav_io = "0.1"

# Math
vek = "0.17"
fastrand = "2.3"

# Multi Threading
rayon = "1.10"

[dev-dependencies]
bugsyth_engine_imgui_support = "0.4.1"